add block footer

--- a/dev/blocks/block-footer/footer.html
+++ b/dev/blocks/block-footer/footer.html
@@ -2,11 +2,22 @@
 <footer>
   <!-- container-->
   <div class="container">
-    <!-- links-->
-    <ul class="footer__links">
-      <li><a href="#" title="">about</a></li>
-      <li><a href="#" title="">privacy policy</a></li>
-      <li><a href="#" title="">sitemap</a></li>
-    </ul>
+    <!-- footer content-->
+    <div class="footer__content">
+      <!-- links-->
+      <ul class="footer__links">
+        <li><a href="#" title="">about</a></li>
+        <li><a href="#" title="">privacy policy</a></li>
+        <li><a href="#" title="">sitemap</a></li>
+      </ul>
+      <!-- socials-->
+      <ul class="footer__socials">
+        <li><a href="#" title=""><img src="img/fb.svg" alt=""/></a></li>
+        <li><a href="#" title=""><img src="img/tw.svg" alt=""/></a></li>
+        <li><a href="#" title=""><img src="img/inst.svg" alt=""/></a></li>
+      </ul>
+      <!-- copyright info-->
+      <p class="footer__copyright">&copy; 2018 SLabs team. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </div>
   </div>
 </footer>
