--- a/dev/index.html
+++ b/dev/index.html
@@ -2,13 +2,10 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--meta(name='viewport', content='width=device-width, initial-scale=1')-->
     <meta name="theme-color" content="#000000">
-    <title>JS-SNIPPETS.COM | Title page</title>
-    <link rel="stylesheet" href="../styles/bootstrap.css">
-    <link rel="stylesheet" href="../styles/jquery.fancybox.min.css">
+    <title>JS-SNIPPETS.COM | Main page</title>
     <link rel="stylesheet" href="../styles/normalize.css">
-    <link rel="stylesheet" href="../styles/animate.css">
     <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body>
@@ -16,22 +13,25 @@
     <footer>
       <!-- container-->
       <div class="container">
-        <!-- links-->
-        <ul class="footer__links">
-          <li><a href="#" title="">about</a></li>
-          <li><a href="#" title="">privacy policy</a></li>
-          <li><a href="#" title="">sitemap</a></li>
-        </ul>
+        <!-- footer content-->
+        <div class="footer__content">
+          <!-- links-->
+          <ul class="footer__links">
+            <li><a href="#" title="">about</a></li>
+            <li><a href="#" title="">privacy policy</a></li>
+            <li><a href="#" title="">sitemap</a></li>
+          </ul>
+          <!-- socials-->
+          <ul class="footer__socials">
+            <li><a href="#" title=""><img src="img/fb.svg" alt=""></a></li>
+            <li><a href="#" title=""><img src="img/tw.svg" alt=""></a></li>
+            <li><a href="#" title=""><img src="img/inst.svg" alt=""></a></li>
+          </ul>
+          <!-- copyright info-->
+          <p class="footer__copyright">&copy; 2018 SLabs team. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
       </div>
     </footer>
-    <!-- scripts-->
-    <script src="../js/jquery-3.2.1.min.js"></script>
-    <script src="../js/jquery.bpopup.min.js"></script>
-    <script src="../js/smooth-scroll.js"></script>
-    <script src="../js/wow.js"></script>
-    <script src="../js/responsiveslides.min.js"></script>
-    <script src="../js/jquery.fancybox.min.js"></script>
-    <script src="../js/scripts.js"></script>
-    <!-- / scripts-->
+    <!-- footer-->
   </body>
 </html>
