--- a/dev/blocks/block-footer/footer.html
+++ b/dev/blocks/block-footer/footer.html
@@ -2,6 +2,10 @@
 <footer>
   <!-- container-->
   <div class="container">
+    <!-- footer top bar-->
+    <div class="footer__topbar"><a class="logo footer__logo" href="#" title=""><span>JS</span>-snippets</a>
+      <div class="logo-line"></div>
+    </div>
     <!-- footer content-->
     <div class="footer__content">
       <!-- links-->
