--- a/dev/blocks/block-navigation/navigation.html
+++ b/dev/blocks/block-navigation/navigation.html
@@ -1,5 +1,11 @@
 
-<header>
+<nav>
   <!-- container-->
-  <div class="container"><a class="logo" href="#" title=""><span>JS</span>-snippets</a></div>
-</header>
+  <div class="container">
+    <ul class="navigation">
+      <li><a href="#" title="">444</a></li>
+      <li><a href="#" title="">444</a></li>
+      <li><a href="#" title="">444</a></li>
+    </ul>
+  </div>
+</nav>
