--- a/dev/blocks/block-search/search.html
+++ b/dev/blocks/block-search/search.html
@@ -1,5 +1,5 @@
 
-<header>
-  <!-- container-->
-  <div class="container"><a class="logo" href="#" title=""><span>JS</span>-snippets</a></div>
-</header>
+<div class="container">
+  <h2>Discover 26,341 code scripts and plugins from $2</h2>
+  <p>All the code you need from PHP to Bootstrap, created by our global community of developers.</p>
+</div>
