--- a/dev/index.html
+++ b/dev/index.html
@@ -15,6 +15,18 @@
       <div class="container"><a class="logo" href="#" title=""><span>JS</span>-snippets</a></div>
     </header>
     <!-- / header-->
+    <!-- header-->
+    <nav>
+      <!-- container-->
+      <div class="container">
+        <ul class="navigation">
+          <li><a href="#" title="">444</a></li>
+          <li><a href="#" title="">444</a></li>
+          <li><a href="#" title="">444</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!-- / header-->
     <!-- main-->
     <main>
       <!-- content-->
@@ -55,6 +67,20 @@
         <article role="post"><a class="icon-tag" href="#" title="">WordPress Theme        </a><a class="posts__preview" href="#" title=""><img src="./img/previews/preview-9.jpg" alt="@@"></a><a class="posts__title" href="#" title="">Sarto - A Multi-Concept Theme for Creative Agencies and Freelancers</a>
           <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/heart.svg" alt=""></a>
         </article>
+      </div>
+      <!-- content-->
+      <div class="container posts">
+        <div class="pagination">
+          <ul>
+            <li><a href="#" title=""><<</a></li>
+            <li><a href="#" title="">1</a></li>
+            <li><a href="#" title="">2</a></li>
+            <li><a href="#" title="">3</a></li>
+            <li><a href="#" title="">4</a></li>
+            <li><a href="#" title="">5</a></li>
+            <li><a href="#" title="">>></a></li>
+          </ul>
+        </div>
       </div>
     </main>
     <!-- / main-->
