--- a/dev/blocks/block-navigation/navigation.html
+++ b/dev/blocks/block-navigation/navigation.html
@@ -3,9 +3,9 @@
   <!-- container-->
   <div class="container">
     <ul class="navigation">
-      <li><a href="#" title="">444</a></li>
-      <li><a href="#" title="">444</a></li>
-      <li><a href="#" title="">444</a></li>
+      <li><a href="#" title="">Item</a></li>
+      <li><a href="#" title="">Item</a></li>
+      <li><a href="#" title="">Item</a></li>
     </ul>
   </div>
 </nav>
