--- a/dev/index.html
+++ b/dev/index.html
@@ -20,9 +20,9 @@
       <!-- container-->
       <div class="container">
         <ul class="navigation">
-          <li><a href="#" title="">444</a></li>
-          <li><a href="#" title="">444</a></li>
-          <li><a href="#" title="">444</a></li>
+          <li><a href="#" title="">Item</a></li>
+          <li><a href="#" title="">Item</a></li>
+          <li><a href="#" title="">Item</a></li>
         </ul>
       </div>
     </nav>
@@ -70,8 +70,8 @@
       </div>
       <!-- content-->
       <div class="container posts">
-        <div class="pagination">
-          <ul>
+        <div class="container">
+          <ul class="pagination">
             <li><a href="#" title=""><<</a></li>
             <li><a href="#" title="">1</a></li>
             <li><a href="#" title="">2</a></li>
