--- a/dev/blocks/block-pagination/pagination.html
+++ b/dev/blocks/block-pagination/pagination.html
@@ -1,6 +1,6 @@
 
-<div class="pagination">
-  <ul>
+<div class="container">
+  <ul class="pagination">
     <li><a href="#" title=""><<</a></li>
     <li><a href="#" title="">1</a></li>
     <li><a href="#" title="">2</a></li>
