--- a/dev/index.html
+++ b/dev/index.html
@@ -33,39 +33,102 @@
       <div class="container posts">
         <!-- post-->
         <article role="post"><a class="icon-tag" href="#" title="">WordPress Theme</a><a class="posts__preview" href="#" title=""><img src="./img/previews/preview-1.jpg" alt="@@"></a><a class="posts__title" href="#" title="">Uranium - Creative Portfolio WordPress Theme</a>
-          <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/heart.svg" alt=""></a>
+          <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+          </ul>
+          <div class="posts__detail">                       
+            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+          </div>
         </article>
         <!-- post-->
         <article role="post"><a class="icon-tag" href="#" title="">WordPress Theme        </a><a class="posts__preview" href="#" title=""><img src="./img/previews/preview-2.jpg" alt="@@"></a><a class="posts__title" href="#" title="">Glück - A Creative Multi-Concept Theme for Digital Agencies and Freelancers</a>
-          <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/heart.svg" alt=""></a>
+          <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+          </ul>
+          <div class="posts__detail">                       
+            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+          </div>
         </article>
         <!-- post-->
         <article role="post"><a class="icon-tag" href="#" title="">WordPress Theme</a><a class="posts__preview" href="#" title=""><img src="./img/previews/preview-3.jpg" alt="@@"></a><a class="posts__title" href="#" title="">Digrand - Portfolio And Blog Theme</a>
-          <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/heart.svg" alt=""></a>
+          <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+          </ul>
+          <div class="posts__detail">                       
+            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+          </div>
         </article>
         <!-- post-->
         <article role="post"><a class="icon-tag" href="#" title="">WordPress Theme        </a><a class="posts__preview" href="#" title=""><img src="./img/previews/preview-4.jpg" alt="@@"></a><a class="posts__title" href="#" title="">Enside - Multipurpose Onepage WordPress Theme</a>
-          <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/heart.svg" alt=""></a>
+          <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+          </ul>
+          <div class="posts__detail">                       
+            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+          </div>
         </article>
         <!-- post-->
         <article role="post"><a class="icon-tag" href="#" title="">WordPress Theme        </a><a class="posts__preview" href="#" title=""><img src="./img/previews/preview-5.jpg" alt="@@"></a><a class="posts__title" href="#" title="">Camille - Multi-Concept WordPress Theme</a>
-          <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/heart.svg" alt=""></a>
+          <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+          </ul>
+          <div class="posts__detail">                       
+            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+          </div>
         </article>
         <!-- post-->
         <article role="post"><a class="icon-tag" href="#" title="">WordPress Theme        </a><a class="posts__preview" href="#" title=""><img src="./img/previews/preview-6.jpg" alt="@@"></a><a class="posts__title" href="#" title="">Andra - Photography Portfolio WordPress Ajax Theme            </a>
-          <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/heart.svg" alt=""></a>
+          <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+          </ul>
+          <div class="posts__detail">                       
+            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+          </div>
         </article>
         <!-- post-->
         <article role="post"><a class="icon-tag" href="#" title="">WordPress Theme        </a><a class="posts__preview" href="#" title=""><img src="./img/previews/preview-7.jpg" alt="@@"></a><a class="posts__title" href="#" title="">AuroraX - Portfolio WordPress Theme</a>
-          <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/heart.svg" alt=""></a>
+          <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+          </ul>
+          <div class="posts__detail">                       
+            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+          </div>
         </article>
         <!-- post-->
         <article role="post"><a class="icon-tag" href="#" title="">WordPress Theme        </a><a class="posts__preview" href="#" title=""><img src="./img/previews/preview-8.jpg" alt="@@"></a><a class="posts__title" href="#" title="">MiniPo - Multipurpose Minimal Portfolio WordPress Theme</a>
-          <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/heart.svg" alt=""></a>
+          <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+          </ul>
+          <div class="posts__detail">                       
+            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+          </div>
         </article>
         <!-- post-->
         <article role="post"><a class="icon-tag" href="#" title="">WordPress Theme        </a><a class="posts__preview" href="#" title=""><img src="./img/previews/preview-9.jpg" alt="@@"></a><a class="posts__title" href="#" title="">Sarto - A Multi-Concept Theme for Creative Agencies and Freelancers</a>
-          <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/heart.svg" alt=""></a>
+          <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+          </ul>
+          <div class="posts__detail">                       
+            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+          </div>
         </article>
       </div>
       <!-- content-->
