add new elements

--- a/dev/detail.html
+++ b/dev/detail.html
@@ -22,6 +22,28 @@
         <!-- post-->
         <article role="detail"><a class="icon-tag" href="#" title="">WordPress Theme        </a><a class="detail__preview" href="#" title=""><img src="./img/previews/preview-9.jpg" alt="@@"></a><a class="detail__title" href="#" title="">Sarto - A Multi-Concept Theme for Creative Agencies and Freelancers</a>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur veritatis ut quidem in deleniti, perspiciatis pariatur maiores totam, facilis, natus dolore distinctio! Quod perferendis exercitationem quae natus fuga aliquid magnam!</p>
+          <ul class="rating">
+            <li><a href="#" title=""></a></li>
+            <li><a href="#" title=""></a></li>
+            <li><a href="#" title=""></a></li>
+            <li><a href="#" title=""></a></li>
+            <li><a href="#" title=""></a></li>
+          </ul>
+          <div class="price"><span>100</span>
+            <p>$</p>
+          </div>
+          <div class="date-published">
+            <p>add 19.05.18</p>
+          </div>
+          <!-- tags-->
+          <ul class="tags">
+            <li><a href="#" title="">item</a></li>
+            <li><a href="#" title="">item</a></li>
+            <li><a href="#" title="">item</a></li>
+            <li><a href="#" title="">item                                </a></li>
+          </ul>
+          <!-- preview--><a class="button" href="#" title="">Preview</a>
+          <!-- buy sex with DIM SAMbI4--><a class="button" href="#" title="">buy</a>
         </article>
         <aside>
           <!-- rewr-->
