--- a/dev/index.html
+++ b/dev/index.html
@@ -39,7 +39,8 @@
             <li>item</li>
           </ul>
           <div class="posts__detail">                       
-            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <hr>
+            <p>lorem ipsum          </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -50,7 +51,8 @@
             <li>item</li>
           </ul>
           <div class="posts__detail">                       
-            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <hr>
+            <p>lorem ipsum               </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -61,7 +63,8 @@
             <li>item</li>
           </ul>
           <div class="posts__detail">                       
-            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <hr>
+            <p>lorem ipsum             </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -72,7 +75,8 @@
             <li>item</li>
           </ul>
           <div class="posts__detail">                       
-            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <hr>
+            <p>lorem ipsum            </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -83,7 +87,8 @@
             <li>item</li>
           </ul>
           <div class="posts__detail">                       
-            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <hr>
+            <p>lorem ipsum            </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -94,7 +99,8 @@
             <li>item</li>
           </ul>
           <div class="posts__detail">                       
-            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <hr>
+            <p>lorem ipsum             </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -105,7 +111,8 @@
             <li>item</li>
           </ul>
           <div class="posts__detail">                       
-            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <hr>
+            <p>lorem ipsum              </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -116,7 +123,8 @@
             <li>item</li>
           </ul>
           <div class="posts__detail">                       
-            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <hr>
+            <p>lorem ipsum             </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -127,7 +135,8 @@
             <li>item</li>
           </ul>
           <div class="posts__detail">                       
-            <hr><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <hr>
+            <p>lorem ipsum         </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
       </div>
