--- a/dev/detail.html
+++ b/dev/detail.html
@@ -40,6 +40,9 @@
               <p>add 19.05.18</p>
             </div>
             <!-- tags-->
+            <div class="title__small_bold">
+              <p>Tags:</p>
+            </div>
             <ul class="tags">
               <li><a href="#" title="">item</a></li>
               <li><a href="#" title="">item</a></li>
