--- a/dev/detail.html
+++ b/dev/detail.html
@@ -59,7 +59,7 @@
     <!-- footer-->
     <footer>
       <!-- container-->
-      <div class="container">
+      <div class="container footer">
         <!-- footer top bar-->
         <div class="footer__topbar"><a class="logo footer__logo" href="#" title=""><span>JS</span>-snippets</a>
           <div class="logo-line"></div>
