--- a/dev/index.html
+++ b/dev/index.html
@@ -29,7 +29,12 @@
     <!-- / header-->
     <!-- main-->
     <main>
-      <!-- content-->
+      <!-- container-->
+      <div class="container categories">
+        <!-- category title-->
+        <h3 class="category__title">Title category</h3>
+      </div>
+      <!-- container-->
       <div class="container posts">
         <!-- post-->
         <article role="post"><a class="icon-tag" href="#" title="">WordPress Theme</a><a class="posts__preview" href="#" title=""><img src="./img/previews/preview-1.jpg" alt="@@"></a><a class="posts__title" href="#" title="">Uranium - Creative Portfolio WordPress Theme</a>
@@ -159,7 +164,7 @@
     <!-- footer-->
     <footer>
       <!-- container-->
-      <div class="container">
+      <div class="container footer">
         <!-- footer top bar-->
         <div class="footer__topbar"><a class="logo footer__logo" href="#" title=""><span>JS</span>-snippets</a>
           <div class="logo-line"></div>
