fixed pages, styles & added block search-informer

--- a/dev/blocks/block-navigation/navigation.html
+++ b/dev/blocks/block-navigation/navigation.html
@@ -3,9 +3,10 @@
   <!-- container-->
   <div class="container">
     <ul class="navigation">
-      <li><a href="#" title="">Item</a></li>
-      <li><a href="#" title="">Item</a></li>
-      <li><a href="#" title="">Item</a></li>
+      <li><a href="#" title="">WordPress</a></li>
+      <li><a href="#" title="">Joomla</a></li>
+      <li><a href="#" title="">Modx</a></li>
+      <li><a href="#" title="">Bitrix</a></li>
     </ul>
   </div>
 </nav>
