--- a/dev/categories.html
+++ b/dev/categories.html
@@ -28,21 +28,12 @@
       </div>
     </nav>
     <!-- / header-->
-    <!-- search informer-->
-    <div class="search-informer">
-      <!-- container-->
-      <div class="container">
-        <h2>43,040 WordPress Themes, Website Templates From $2</h2>
-        <p>WordPress themes, web templates and more. Brought to you by the largest global community of creatives.</p>
-      </div>
-    </div>
-    <!-- / search informer-->
     <!-- main-->
     <main>
       <!-- container-->
-      <div class="container">
+      <div class="container categories">
         <!-- category title-->
-        <h3 class="category__title">Novelties</h3>
+        <h3 class="category__title">Title category</h3>
       </div>
       <!-- container-->
       <div class="container posts">
@@ -55,7 +46,7 @@
           </ul>
           <div class="posts__detail">                       
             <hr>
-            <p>lorem ipsum          </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-share" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <p>lorem ipsum          </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -67,7 +58,7 @@
           </ul>
           <div class="posts__detail">                       
             <hr>
-            <p>lorem ipsum               </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-share" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <p>lorem ipsum               </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -79,7 +70,7 @@
           </ul>
           <div class="posts__detail">                       
             <hr>
-            <p>lorem ipsum             </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-share" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <p>lorem ipsum             </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -91,7 +82,7 @@
           </ul>
           <div class="posts__detail">                       
             <hr>
-            <p>lorem ipsum            </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-share" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <p>lorem ipsum            </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -103,7 +94,7 @@
           </ul>
           <div class="posts__detail">                       
             <hr>
-            <p>lorem ipsum            </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-share" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <p>lorem ipsum            </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -115,7 +106,7 @@
           </ul>
           <div class="posts__detail">                       
             <hr>
-            <p>lorem ipsum             </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-share" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <p>lorem ipsum             </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -127,7 +118,7 @@
           </ul>
           <div class="posts__detail">                       
             <hr>
-            <p>lorem ipsum              </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-share" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <p>lorem ipsum              </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -139,7 +130,7 @@
           </ul>
           <div class="posts__detail">                       
             <hr>
-            <p>lorem ipsum             </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-share" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <p>lorem ipsum             </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
         <!-- post-->
@@ -151,7 +142,7 @@
           </ul>
           <div class="posts__detail">                       
             <hr>
-            <p>lorem ipsum         </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-share" href="#" title=""><img src="img/share.svg" alt=""></a>
+            <p>lorem ipsum         </p><a class="button posts__button-preview" href="#" title="">Preview</a><a class="icon-heart" href="#" title=""><img src="img/share.svg" alt=""></a>
           </div>
         </article>
       </div>
