styled page index

--- a/dev/index.html
+++ b/dev/index.html
@@ -34,6 +34,13 @@
       <div class="container">
         <h2>43,040 WordPress Themes, Website Templates From $2</h2>
         <p>WordPress themes, web templates and more. Brought to you by the largest global community of creatives.</p>
+        <!-- block search-->
+        <div class="search search-informer__search">
+          <form action="/" method="post">
+            <button><img src="../img/search.svg" alt="@@"></button>
+            <input name="search" type="text" placeholder="Search...">
+          </form>
+        </div>
       </div>
     </div>
     <!-- / search informer-->
@@ -159,13 +166,13 @@
       <div class="container posts">
         <div class="container">
           <ul class="pagination">
-            <li><a href="#" title=""><<</a></li>
+            <li><a href="#" title=""><img class="pagination__prev" src="../img/arrow.svg" alt="@@"></a></li>
             <li><a href="#" title="">1</a></li>
             <li><a href="#" title="">2</a></li>
             <li><a href="#" title="">3</a></li>
             <li><a href="#" title="">4</a></li>
             <li><a href="#" title="">5</a></li>
-            <li><a href="#" title="">>></a></li>
+            <li><a href="#" title=""><img class="pagination__next" src="../img/arrow.svg" alt="@@"></a></li>
           </ul>
         </div>
       </div>
