--- a/dev/blocks/block-pagination/pagination.html
+++ b/dev/blocks/block-pagination/pagination.html
@@ -1,12 +1,12 @@
 
 <div class="container">
   <ul class="pagination">
-    <li><a href="#" title=""><<</a></li>
+    <li><a href="#" title=""><img class="pagination__prev" src="../img/arrow.svg" alt="@@"/></a></li>
     <li><a href="#" title="">1</a></li>
     <li><a href="#" title="">2</a></li>
     <li><a href="#" title="">3</a></li>
     <li><a href="#" title="">4</a></li>
     <li><a href="#" title="">5</a></li>
-    <li><a href="#" title="">>></a></li>
+    <li><a href="#" title=""><img class="pagination__next" src="../img/arrow.svg" alt="@@"/></a></li>
   </ul>
 </div>
