--- a/dev/blocks/block-search-informer/search-informer.html
+++ b/dev/blocks/block-search-informer/search-informer.html
@@ -4,5 +4,12 @@
   <div class="container">
     <h2>43,040 WordPress Themes, Website Templates From $2</h2>
     <p>WordPress themes, web templates and more. Brought to you by the largest global community of creatives.</p>
+    <!-- block search-->
+    <div class="search search-informer__search">
+      <form action="/" method="post">
+        <button><img src="../img/search.svg" alt="@@"/></button>
+        <input name="search" type="text" placeholder="Search..."/>
+      </form>
+    </div>
   </div>
 </div>
